[package]
name = "cyborgai_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4.0.0-beta.10"
actix-multipart = "0.4.0-beta.4"
futures = "0.3"
sanitize-filename = "0.3.0"
sha2 = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime_guess = "2.0.3"
once_cell = "1.8.0"
mime = "0.3.16"
